# mycpu

./: .gitignore  ACCEPTANCE_REPORT.md  ARCHITECTURE_GUIDE.md  CMakeLists.txt  DEBUGGER_GUIDE.txt  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  demo_for_teacher.sh  run_all_tests.sh
docs/: ISA_subset.md
include/mycpu/: assembler.h  cpu.h  debugger.h  decoder.h  exec.h  idt.h  isa.h  loader.h  memory.h  mmu.h  pic.h  pit.h  types.h  uart.h
src/: asm_main.c  assembler.c  cpu.c  debugger.c  debugger_main.c  decoder.c  exec.c  idt.c  loader.c  main.c  memory.c  mmu.c  pic.c  pit.c  uart.c
tests/: test_detailed.c  test_fib.c  test_interrupt.c  test_new_inst.c  test_simple.c  test_vm.c
tests/programs/: demo.asm  smoke.asm
tools/: README.md
